Fix scroll on mobile

--- a/src/components/pages/Dashboard/pages/Wallets/Wallets.module.css
+++ b/src/components/pages/Dashboard/pages/Wallets/Wallets.module.css
@@ -98,7 +98,7 @@
   top: 100%;
   left: 0;
 
-  max-height: 70vh;
+  max-height: 50vh;
 
   background-color: #fff;
   border: 1px solid #d9dfe4;
